--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
       </nav>
       <ul class="contacts">
         <li class="contacts-item">
-          <a class="nav-contacts" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+          <a class="nav-contacts" href="mailto:info@devstudio.com">
+            <svg class="envelope">
+              <use href="./images/symbol-defs.svg#icon-envelope-hover"></use>
+            </svg>
+            info@devstudio.com
+            </a>
         </li>
         <li class="contacts-item">
-          <a class="nav-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="nav-contacts" href="tel:+380961111111">
+            <svg class="vector">
+              <use href="./images/symbol-defs.svg#icon-vector"></use>
+            </svg>
+            +38 096 111 11 11</a>
         </li>
       </ul>
       </div>
@@ -49,33 +56,33 @@
         <button class="hero-btn" type="button">
         Замовити послугу
         </button>
-      </div>
+        </div>
       </section>
       <section class="section">
       <div class="conteiner">
         <h2 class="visually-hidden">Наші перваги</h2>
         <ul class="benefits-flex">
-          <li class="benefits-item">
+          <li class="benefits-item benefits-item-1">
             <h3 class="benefits-title">Увага до деталей</h3>
             <p class="benefits-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li class="benefits-item">
+          <li class="benefits-item benefits-item-2">
             <h3 class="benefits-title">Пунктуальність</h3>
             <p class="benefits-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li class="benefits-item">
-            <h3 class="benefits-title">Планування</h3>
+          <li class="benefits-item benefits-item-3">
+            <h3 class="benefits-title ">Планування</h3>
             <p class="benefits-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li class="benefits-item">
+          <li class="benefits-item benefits-item-4">
             <h3 class="benefits-title">Сучасні технології</h3>
             <p class="benefits-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -126,6 +133,36 @@
             <div class="worker-position">
               <h3 class="list-worker">Ігор Дем'яненко</h3>
               <p class="list-position">Product Designer</p>
+              <ul class="item-network">
+                <li class="item-network-link">
+                  <a href="" class="link-instagram">
+                    <svg class="instagram" height="20" width="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-twitter">
+                    <svg class="twitter" height="16" width="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </a>
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-facebook">
+                    <svg class="facebook" height="20" width="10">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-linkedin">
+                    <svg class="linkedin" height="20" width="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
             </li>
           <li class="flex-item">
@@ -164,9 +201,59 @@
         </ul>
       </div>
       </section>
+      <section class="section">
+        <div class="conteiner">
+          <h2 class="client-title">Постійні клієнти</h2>
+          <ul class="clients">
+            <li class="client">
+              <a  href="" class="link-client-logo">
+                <svg class="client-logo">
+                <use href="./images/symbol-defs.svg#icon-Logo-klient-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href=""class="link-client-logo">
+              <svg class="client-logo">
+                <use href="./images/symbol-defs.svg#icon-Logo-klient-2"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link-client-logo">
+              <svg class="client-logo">
+                <use href="./images/symbol-defs.svg#icon-Logo-klient-3"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link-client-logo">
+              <svg class="client-logo">
+                <use href="./images/symbol-defs.svg#icon-Logo-klient-4"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link-client-logo">
+              <svg class="client-logo">
+                <use href="./images/symbol-defs.svg#icon-Logo-klient-5"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link-client-logo">
+              <svg class="client-logo">
+                <use href="./images/symbol-defs.svg#icon-Logo-klient-6"></use>
+              </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="conteiner">
+      <div class="conteiner footer-flex">
+      <div class="footer-flex-item">
       <a href="./index.html" class="logo logo-footer"
         ><span class="icon">Web</span>Studio</a
       >
@@ -187,6 +274,39 @@
           </li>
         </ul>
       </address>
+      </div>
+      <div class="footer-flex-item">
+      <h3 class="footer-title">приєднуйтесь</h3>
+      <ul class="item-network">
+        <li class="item-network-link">
+          <a href="" class="link-instagram footer-link-instagram">
+            <svg class="instagram footer-instagram" height="20" width="20">
+            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-network-link">
+          <a href="" class="link-twitter">
+            <svg class="twitter" height="16" width="20">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
+          </a>
+        </li>
+        <li class="item-network-link">
+          <a href="" class="link-facebook">
+            <svg class="facebook" height="20" width="10">
+            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-network-link">
+          <a href="" class="link-linkedin">
+            <svg class="linkedin" height="20" width="20">
+            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      </div>
       </div>
     </footer>
   </body>
