--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
       <ul class="contacts">
         <li class="contacts-item">
           <a class="nav-contacts" href="mailto:info@devstudio.com">
-            <svg class="envelope">
-              <use href="./images/symbol-defs.svg#icon-envelope-hover"></use>
+            <svg class="envelope" width="16" height="12px">
+              <use href="./images/icons.svg#icon-envelope-hover"></use>
             </svg>
             info@devstudio.com
             </a>
         </li>
         <li class="contacts-item">
           <a class="nav-contacts" href="tel:+380961111111">
-            <svg class="vector">
-              <use href="./images/symbol-defs.svg#icon-vector"></use>
+            <svg class="vector"  width="10" height="16">
+              <use href="./images/icons.svg#icon-vector"></use>
             </svg>
             +38 096 111 11 11</a>
         </li>
@@ -59,10 +59,15 @@
         </div>
       </section>
       <section class="section">
-      <div class="conteiner">
+        <div class="conteiner">
         <h2 class="visually-hidden">Наші перваги</h2>
         <ul class="benefits-flex">
           <li class="benefits-item benefits-item-1">
+            <div class="thumbs">
+              <svg class="icon-benefit-1" width="70" height="70">
+              <use href="./images/icons.svg#icon-benefit-1"></use>
+              </svg>
+            </div>
             <h3 class="benefits-title">Увага до деталей</h3>
             <p class="benefits-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
@@ -70,6 +75,11 @@
             </p>
           </li>
           <li class="benefits-item benefits-item-2">
+            <div class="thumbs">
+              <svg class="icon-benefit-1" width="70" height="70">
+              <use href="./images/icons.svg#icon-benefit-2"></use>
+              </svg>
+            </div>
             <h3 class="benefits-title">Пунктуальність</h3>
             <p class="benefits-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
@@ -77,12 +87,22 @@
             </p>
           </li>
           <li class="benefits-item benefits-item-3">
+            <div class="thumbs">
+              <svg class="icon-benefit-1" width="70" height="70">
+              <use href="./images/icons.svg#icon-benefit-3"></use>
+              </svg>
+            </div>
             <h3 class="benefits-title ">Планування</h3>
             <p class="benefits-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li class="benefits-item benefits-item-4">
+            <div class="thumbs">
+              <svg class="icon-benefit-1" width="70" height="70">
+              <use href="./images/icons.svg#icon-benefit-4"></use>
+              </svg>
+            </div>
             <h3 class="benefits-title">Сучасні технології</h3>
             <p class="benefits-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -137,20 +157,21 @@
                 <li class="item-network-link">
                   <a href="" class="link-instagram">
                     <svg class="instagram" height="20" width="20">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-network-link">
                   <a href="" class="link-twitter">
                     <svg class="twitter" height="16" width="20">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="item-network-link">
                   <a href="" class="link-facebook">
                     <svg class="facebook" height="20" width="10">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
 
@@ -158,7 +179,7 @@
                 <li class="item-network-link">
                   <a href="" class="link-linkedin">
                     <svg class="linkedin" height="20" width="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -174,6 +195,37 @@
             <div class="worker-position">
               <h3 class="list-worker">Ольга Рєпіна</h3>
               <p class="list-position">Frontend Developer</p>
+              <ul class="item-network">
+                <li class="item-network-link">
+                  <a href="" class="link-instagram">
+                    <svg class="instagram" height="20" width="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-twitter">
+                    <svg class="twitter" height="16" width="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-facebook">
+                    <svg class="facebook" height="20" width="10">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-linkedin">
+                    <svg class="linkedin" height="20" width="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
             </li>
           <li class="flex-item">
@@ -185,6 +237,37 @@
             <div class="worker-position">
               <h3 class="list-worker">Микола Тарасов</h3>
               <p class="list-position">Marketing</p>
+              <ul class="item-network">
+                <li class="item-network-link">
+                  <a href="" class="link-instagram">
+                    <svg class="instagram" height="20" width="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-twitter">
+                    <svg class="twitter" height="16" width="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-facebook">
+                    <svg class="facebook" height="20" width="10">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-linkedin">
+                    <svg class="linkedin" height="20" width="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
             </li>
           <li class="flex-item">
@@ -196,6 +279,37 @@
             <div class="worker-position">
               <h3 class="list-worker">Михайло Єрмаков</h3>
               <p class="list-position">UI Designer</p>
+              <ul class="item-network">
+                <li class="item-network-link">
+                  <a href="" class="link-instagram">
+                    <svg class="instagram" height="20" width="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-twitter">
+                    <svg class="twitter" height="16" width="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-facebook">
+                    <svg class="facebook" height="20" width="10">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+
+                </li>
+                <li class="item-network-link">
+                  <a href="" class="link-linkedin">
+                    <svg class="linkedin" height="20" width="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
             </li>
         </ul>
@@ -208,42 +322,42 @@
             <li class="client">
               <a  href="" class="link-client-logo">
                 <svg class="client-logo">
-                <use href="./images/symbol-defs.svg#icon-Logo-klient-1"></use>
+                <use href="./images/icons.svg#icon-Logo-klient-1"></use>
                 </svg>
               </a>
             </li>
             <li class="client">
-              <a href=""class="link-client-logo">
+              <a href="" class="link-client-logo">
               <svg class="client-logo">
-                <use href="./images/symbol-defs.svg#icon-Logo-klient-2"></use>
+                <use href="./images/icons.svg#icon-Logo-klient-2"></use>
               </svg>
               </a>
             </li>
             <li class="client">
               <a href="" class="link-client-logo">
               <svg class="client-logo">
-                <use href="./images/symbol-defs.svg#icon-Logo-klient-3"></use>
+                <use href="./images/icons.svg#icon-Logo-klient-3"></use>
               </svg>
               </a>
             </li>
             <li class="client">
               <a href="" class="link-client-logo">
               <svg class="client-logo">
-                <use href="./images/symbol-defs.svg#icon-Logo-klient-4"></use>
+                <use href="./images/icons.svg#icon-Logo-klient-4"></use>
               </svg>
               </a>
             </li>
             <li class="client">
               <a href="" class="link-client-logo">
               <svg class="client-logo">
-                <use href="./images/symbol-defs.svg#icon-Logo-klient-5"></use>
+                <use href="./images/icons.svg#icon-Logo-klient-5"></use>
               </svg>
               </a>
             </li>
             <li class="client">
               <a href="" class="link-client-logo">
               <svg class="client-logo">
-                <use href="./images/symbol-defs.svg#icon-Logo-klient-6"></use>
+                <use href="./images/icons.svg#icon-Logo-klient-6"></use>
               </svg>
               </a>
             </li>
@@ -275,33 +389,34 @@
         </ul>
       </address>
       </div>
-      <div class="footer-flex-item">
+      <div class="footer-flex-item-link">
       <h3 class="footer-title">приєднуйтесь</h3>
       <ul class="item-network">
         <li class="item-network-link">
           <a href="" class="link-instagram footer-link-instagram">
             <svg class="instagram footer-instagram" height="20" width="20">
-            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+            <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="item-network-link">
-          <a href="" class="link-twitter">
-            <svg class="twitter" height="16" width="20">
-              <use href="./images/symbol-defs.svg#icon-twitter"></use>
-          </a>
-        </li>
-        <li class="item-network-link">
-          <a href="" class="link-facebook">
-            <svg class="facebook" height="20" width="10">
-            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+          <a href="" class="link-twitter footer-link-twitter">
+            <svg class="twitter footer-twitter" height="16" width="20">
+              <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
         <li class="item-network-link">
-          <a href="" class="link-linkedin">
-            <svg class="linkedin" height="20" width="20">
-            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+          <a href="" class="link-facebook footer-link-facebook">
+            <svg class="facebook footer-facebook" height="20" width="10">
+            <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-network-link">
+          <a href="" class="link-linkedin footer-link-linkedin">
+            <svg class="linkedin footer-linkedin" height="20" width="20">
+            <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
           </a>
         </li>
