--- a/portfolio.html
+++ b/portfolio.html
@@ -28,17 +28,25 @@
         </nav>
         <ul class="contacts">
           <li class="contacts-item">
-            <a class="nav-contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="nav-contacts" href="mailto:info@devstudio.com">
+              <svg class="envelope" width="16" height="12px">
+                <use href="./images/icons.svg#icon-envelope-hover"></use>
+              </svg>
+              info@devstudio.com
+              </a>
           </li>
           <li class="contacts-item">
-            <a class="nav-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="nav-contacts" href="tel:+380961111111">
+              <svg class="vector"  width="10" height="14">
+                <use href="./images/icons.svg#icon-vector"></use>
+              </svg>
+              +38 096 111 11 11</a>
           </li>
         </ul>
         </div>
       </div>
       </header>
+      
     <main>
       <section class="section">
       <div class="conteiner">
@@ -62,7 +70,7 @@
         </ul>
         <ul class="project-list">
           <li class="project-list-item">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img1.jpg"
                 alt="фото з даними трьох людей, зображених на ноутбуці"
@@ -75,7 +83,7 @@
             </a>
           </li>
           <li class="project-list-item">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img2.jpg"
                 alt="фото з двома чоловіками, які грають в баскетбол"
@@ -88,7 +96,7 @@
             </a>
           </li>
           <li class="project-no-gap">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img3.jpg"
                 alt="фото логотипу ресторану"
@@ -101,7 +109,7 @@
             </a>
           </li>
           <li class="project-list-item">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img4.jpg"
                 alt="фото навушників"
@@ -114,7 +122,7 @@
             </a>
           </li>
           <li class="project-list-item">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img5.jpg"
                 alt="фото двох коробок"
@@ -127,7 +135,7 @@
               </a>
           </li>
           <li class="project-list-item">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img6.jpg"
                 alt="фото монітора від компютера"
@@ -140,7 +148,7 @@
             </a>
           </li>
           <li class="project-list-item">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img7.jpg"
                 alt="фото відкритої книги"
@@ -153,7 +161,7 @@
             </a>
           </li>
           <li class="project-list-item">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img8.jpg"
                 alt="фото надпису на кулоні"
@@ -166,7 +174,7 @@
             </a>
           </li>
           <li class="project-list-item">
-            <a>
+            <a href="" class="project-list-link">
               <img class="project-no-gap"
                 src="./images/hm2-img9.jpg"
                 alt="фото рук людини, які працюють на клавіатурі ноутбука"
@@ -183,7 +191,8 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="conteiner">
+      <div class="conteiner footer-flex">
+      <div class="footer-flex-item">
       <a href="./index.html" class="logo logo-footer"
         ><span class="icon">Web</span>Studio</a
       >
@@ -204,6 +213,40 @@
           </li>
         </ul>
       </address>
+      </div>
+      <div class="footer-flex-item-link">
+      <h3 class="footer-title">приєднуйтесь</h3>
+      <ul class="item-network">
+        <li class="item-network-link">
+          <a href="" class="link-instagram footer-link-instagram">
+            <svg class="instagram footer-instagram" height="20" width="20">
+            <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-network-link">
+          <a href="" class="link-twitter footer-link-twitter">
+            <svg class="twitter footer-twitter" height="16" width="20">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-network-link">
+          <a href="" class="link-facebook footer-link-facebook">
+            <svg class="facebook footer-facebook" height="20" width="10">
+            <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-network-link">
+          <a href="" class="link-linkedin footer-link-linkedin">
+            <svg class="linkedin footer-linkedin" height="20" width="20">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      </div>
       </div>
     </footer>
   </body>
