--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       </address>
       </div>
       <div class="footer-flex-item-link">
-      <h3 class="footer-title">приєднуйтесь</h3>
+      <p class="footer-title">приєднуйтесь</p>
       <ul class="item-network">
         <li class="item-network-link">
           <a href="" class="link-instagram footer-link-instagram">
